# whisper-python

./: .gitignore  README.md  live.bat  live.py  pyproject.toml  setup.bat  subtitles.bat  subtitles.py  whisper.bat
